--- a/index.html
+++ b/index.html
@@ -269,7 +269,9 @@
     function updateGameArea() {
       myGameArea.clear();
       moveObject(clickedObj)
-      updateArr.forEach(comp => comp.update())
+      for(var i=0 ; i< updateArr.length ; i++)
+      updateArr[i].update()
+      // updateArr.forEach(comp => comp.update())
       myInstructions.update();
     }
 
