copperstrip text updated

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       myInivsibleWA = new component(180, 100, "none", 60, 315, "rect", null, null, 0);
 
 
-      coperStrip = new component(150, 10, "coperstrip.png", 571, 365, "image", copper, false, null);
-      coperStrip1 = new component(150, 10, "coperstrip.png", 586, 385, "image", copper, false, null);
+      coperStrip = new component(150, 10, "coperStrip.png", 571, 365, "image", copper, false, null);
+      coperStrip1 = new component(150, 10, "coperStrip.png", 586, 385, "image", copper, false, null);
 
       myMagnesium = new component(150, 10, "magnesium.png", 605, 410, "image", mg, true, null);
       myMagnesium1 = new component(150, 10, "magnesium.png", 620, 430, "image", mg, true, null);
